--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -47,4 +47,32 @@ input[type=number] {
   box-shadow: 0px 0px 0px 22px #8dff7f30;
   transition: all 0.3s ease;
 }
+.wheel-main {
+  animation: scale 1s forwards;
+}
+@keyframes scale {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
+  }
+}
 
+
+
+.pulsate {
+  animation: pulsate 1.5s infinite;
+}
+/* pulsate */
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
